--- a/osms/src/components/css/ServiceStatus.css
+++ b/osms/src/components/css/ServiceStatus.css
@@ -1,25 +1,3 @@
-/* Lazy Load Styles */
-.card-image {
-	display: block;
-	min-height: 20rem; /* layout hack */
-	background: #fff center center no-repeat;
-	background-size: cover;
-	filter: blur(3px); /* blur the lowres image */
-}
-
-.card-image > img {
-	display: block;
-	width: 100%;
-	opacity: 0; /* visually hide the img element */
-}
-
-.card-image.is-loaded {
-	filter: none; /* remove the blur on fullres image */
-	transition: filter 1s;
-}
-
-
-
 
 /* Layout Styles */
 html, body {
@@ -65,8 +43,10 @@ html, body {
 
 .card-description > h2 {
 	margin: 0 0 0.5em;
-}
 
-.card-description > p {
+}
+.heading-of-details  {
 	margin: 0;
+	text-align: start;
+	 color:rgb(44, 44, 135); 
 }
