--- a/osms/src/components/css/Home.css
+++ b/osms/src/components/css/Home.css
@@ -441,7 +441,7 @@
     cursor: pointer;
     width: 100%;
     border: none;
-    background: #4CAF50;
+    background: #3e00e9;
     color: #FFF;
     margin: 0 0 5px;
     padding: 10px;
