--- a/osms/src/components/css/Log.css
+++ b/osms/src/components/css/Log.css
@@ -28,7 +28,7 @@
     font-family: "Roboto", sans-serif;
     text-transform: uppercase;
     outline: 0;
-    background: #4CAF50;
+    background: #0A2558;
     width: 100%;
     border: 0;
     padding: 15px;
@@ -47,7 +47,7 @@
     font-size: 12px;
   }
   .form .message a {
-    color: #4CAF50;
+    color: #0A2558;
     text-decoration: none;
   }
   .form .register-form {
