--- a/osms/src/components/css/Log.css
+++ b/osms/src/components/css/Log.css
@@ -39,7 +39,7 @@
     cursor: pointer;
   }
   .form button:hover,.form button:active,.form button:focus {
-    background: #43A047;
+    background: #0d3a8e;
   }
   .form .message {
     margin: 15px 0 0;
