--- a/osms/src/components/css/Home.css
+++ b/osms/src/components/css/Home.css
@@ -449,7 +449,7 @@
   }
   
   #contact button[type="submit"]:hover {
-    background: #43A047;
+    background: #0e3682;
     -webkit-transition: background 0.3s ease-in-out;
     -moz-transition: background 0.3s ease-in-out;
     transition: background-color 0.3s ease-in-out;
